* Simplify feature tests by recycling the div test element and temp vars. [jddalton]

* Use native String#trim if available. [jddalton]

* Reorganize source. [jddalton]

*1.2.0* (November 2, 2009)